# yummie

./: Makefile  README.md  pyproject.toml  setup.py  yummie  yummie.conf.example  yummie.spec
cron.weekly/: yummie
